# sizhu-programming

./: LICENSE  README.md  pyproject.toml  sizhu_programming.md
sizhu/: __init__.py  cli.py  core.py
tests/: test_core.py
