[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sizhu-programming"
version = "0.1.0"
description = "四柱编程最小可运行原型"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "sahan" }
]
dependencies = []

[tool.setuptools]
packages = ["sizhu"]